examples/envoy-sample-filter.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:9000",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "use_remote_address":true,
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "backend",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/b",
                      "headers" : [
                        {
                          "name": "go-to-origin",
                          "value": "false"
                        }
                      ],
                      "cluster": "ats-cache"
                    },
                    {
                      "timeout_ms": 0,
                      "prefix": "/b",
                      "headers" : [
                        {
                          "name": "go-to-origin",
                          "value": "true"
                        }
                      ],
                      "cluster": "browse",
 		      "host_rewrite":"www.ebay.com"
                    }

                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "ufesorch",
                "config": {
                  "orchestrator_cluster": "local-orch",
                  "timeout": 10000
                }
              },
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    },
    {
      "address": "tcp://0.0.0.0:9001",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "use_remote_address":true,
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "backend",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/b",
                      "cluster": "browse",
                      "host_rewrite":"www.ebay.com"
                    }

                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/dev/null",
    "address": "tcp://0.0.0.0:8001"
  },
  "cluster_manager": {
    "clusters": [
    {
        "name": "browse",
        "service_name": "browse",
        "connect_timeout_ms": 600000,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://23.196.198.12:80"
          }
        ]
     },
      {
        "name": "local-orch",
        "connect_timeout_ms": 250,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
            {
            "url": "tcp://127.0.0.1:9090"
          },
          {
            "url": "tcp://127.0.0.1:9091"
          }
        ]
      },
      {
        "name": "ats-cache",
        "connect_timeout_ms": 250,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
            {
            "url": "tcp://127.0.0.1:8080"
          }
        ]
      }
    ]
  }
}
